Broncode/operatiebrp-code-145.3/brp/brp-leveren/brp-leveren-domain/brp-domain-expressie/src/main/java/nl/bzk/brp/domain/expressie/parser/antlr/BRPExpressietaalParser.java
/**
 * This file is copyright 2017 State of the Netherlands (Ministry of Interior Affairs and Kingdom Relations).
 * It is made available under the terms of the GNU Affero General Public License, version 3 as published by the Free Software Foundation.
 * The project of which this file is part, may be found at www.github.com/MinBZK/operatieBRP.
 */

// Generated from BRPExpressietaal.g4 by ANTLR 4.7

package nl.bzk.brp.domain.expressie.parser.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BRPExpressietaalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, STRING=29, INTEGER=30, WS=31, 
		LP=32, RP=33, LL=34, RL=35, COMMA=36, DOT=37, UNKNOWN_VALUE=38, EOP_EQUAL=39, 
		AOP_EQUAL=40, OP_EQUAL=41, EOP_NOT_EQUAL=42, AOP_NOT_EQUAL=43, OP_NOT_EQUAL=44, 
		EOP_LIKE=45, AOP_LIKE=46, OP_LIKE=47, EOP_LESS=48, AOP_LESS=49, OP_LESS=50, 
		EOP_GREATER=51, AOP_GREATER=52, OP_GREATER=53, EOP_LESS_EQUAL=54, AOP_LESS_EQUAL=55, 
		OP_LESS_EQUAL=56, EOP_GREATER_EQUAL=57, AOP_GREATER_EQUAL=58, OP_GREATER_EQUAL=59, 
		OP_AIN_WILDCARD=60, OP_AIN=61, OP_EIN_WILDCARD=62, OP_EIN=63, OP_PLUS=64, 
		OP_MINUS=65, OP_OR=66, OP_AND=67, OP_NOT=68, OP_REF=69, OP_WAARBIJ=70, 
		TRUE_CONSTANT=71, FALSE_CONSTANT=72, NULL_CONSTANT=73, MAAND_JAN=74, MAAND_FEB=75, 
		MAAND_MRT=76, MAAND_APR=77, MAAND_MEI=78, MAAND_JUN=79, MAAND_JUL=80, 
		MAAND_AUG=81, MAAND_SEP=82, MAAND_OKT=83, MAAND_NOV=84, MAAND_DEC=85, 
		IDENTIFIER=86;
	public static final int
		RULE_brp_expressie = 0, RULE_exp = 1, RULE_closure = 2, RULE_assignments = 3, 
		RULE_assignment = 4, RULE_booleanExp = 5, RULE_booleanTerm = 6, RULE_equalityExpression = 7, 
		RULE_equalityOp = 8, RULE_relationalExpression = 9, RULE_relationalOp = 10, 
		RULE_collectionEOp = 11, RULE_collectionAOp = 12, RULE_ordinalExpression = 13, 
		RULE_ordinalOp = 14, RULE_negatableExpression = 15, RULE_negationOperator = 16, 
		RULE_unaryExpression = 17, RULE_bracketedExp = 18, RULE_expressionList = 19, 
		RULE_emptyList = 20, RULE_nonEmptyList = 21, RULE_element = 22, RULE_variable = 23, 
		RULE_function = 24, RULE_functionName = 25, RULE_existFunction = 26, RULE_existFunctionName = 27, 
		RULE_literal = 28, RULE_stringLiteral = 29, RULE_booleanLiteral = 30, 
		RULE_numericLiteral = 31, RULE_dateTimeLiteral = 32, RULE_dateLiteral = 33, 
		RULE_year = 34, RULE_month = 35, RULE_monthName = 36, RULE_day = 37, RULE_hour = 38, 
		RULE_minute = 39, RULE_second = 40, RULE_periodLiteral = 41, RULE_relativeYear = 42, 
		RULE_relativeMonth = 43, RULE_relativeDay = 44, RULE_periodPart = 45, 
		RULE_elementCodeLiteral = 46, RULE_nullLiteral = 47, RULE_element_path = 48;
	public static final String[] ruleNames = {
		"brp_expressie", "exp", "closure", "assignments", "assignment", "booleanExp", 
		"booleanTerm", "equalityExpression", "equalityOp", "relationalExpression", 
		"relationalOp", "collectionEOp", "collectionAOp", "ordinalExpression", 
		"ordinalOp", "negatableExpression", "negationOperator", "unaryExpression", 
		"bracketedExp", "expressionList", "emptyList", "nonEmptyList", "element", 
		"variable", "function", "functionName", "existFunction", "existFunctionName", 
		"literal", "stringLiteral", "booleanLiteral", "numericLiteral", "dateTimeLiteral", 
		"dateLiteral", "year", "month", "monthName", "day", "hour", "minute", 
		"second", "periodLiteral", "relativeYear", "relativeMonth", "relativeDay", 
		"periodPart", "elementCodeLiteral", "nullLiteral", "element_path"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'IS_NULL'", "'DATUM'", "'VANDAAG'", "'DAG'", "'MAAND'", "'JAAR'", 
		"'AANTAL_DAGEN'", "'LAATSTE_DAG'", "'AANTAL'", "'ALS'", "'HISM'", "'HISM_LAATSTE'", 
		"'HISF'", "'GEWIJZIGD'", "'KV'", "'KNV'", "'ACTIE'", "'AH'", "'SELECTIE_DATUM'", 
		"'SELECTIE_LIJST'", "'ER_IS'", "'ALLE'", "'FILTER'", "'MAP'", "'/'", "'^'", 
		"'['", "']'", null, null, null, "'('", "')'", "'{'", "'}'", "','", "'.'", 
		"'?'", "'E='", "'A='", "'='", "'E<>'", "'A<>'", "'<>'", "'E=%'", "'A=%'", 
		"'=%'", "'E<'", "'A<'", "'<'", "'E>'", "'A>'", "'>'", "'E<='", "'A<='", 
		"'<='", "'E>='", "'A>='", "'>='", "'AIN%'", "'AIN'", "'EIN%'", "'EIN'", 
		"'+'", "'-'", "'OF'", "'EN'", "'NIET'", "'$'", "'WAARBIJ'", null, null, 
		"'NULL'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "STRING", "INTEGER", "WS", "LP", "RP", "LL", 
		"RL", "COMMA", "DOT", "UNKNOWN_VALUE", "EOP_EQUAL", "AOP_EQUAL", "OP_EQUAL", 
		"EOP_NOT_EQUAL", "AOP_NOT_EQUAL", "OP_NOT_EQUAL", "EOP_LIKE", "AOP_LIKE", 
		"OP_LIKE", "EOP_LESS", "AOP_LESS", "OP_LESS", "EOP_GREATER", "AOP_GREATER", 
		"OP_GREATER", "EOP_LESS_EQUAL", "AOP_LESS_EQUAL", "OP_LESS_EQUAL", "EOP_GREATER_EQUAL", 
		"AOP_GREATER_EQUAL", "OP_GREATER_EQUAL", "OP_AIN_WILDCARD", "OP_AIN", 
		"OP_EIN_WILDCARD", "OP_EIN", "OP_PLUS", "OP_MINUS", "OP_OR", "OP_AND", 
		"OP_NOT", "OP_REF", "OP_WAARBIJ", "TRUE_CONSTANT", "FALSE_CONSTANT", "NULL_CONSTANT", 
		"MAAND_JAN", "MAAND_FEB", "MAAND_MRT", "MAAND_APR", "MAAND_MEI", "MAAND_JUN", 
		"MAAND_JUL", "MAAND_AUG", "MAAND_SEP", "MAAND_OKT", "MAAND_NOV", "MAAND_DEC", 
		"IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BRPExpressietaal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BRPExpressietaalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Brp_expressieContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public Brp_expressieContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brp_expressie; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitBrp_expressie(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Brp_expressieContext brp_expressie() throws RecognitionException {
		Brp_expressieContext _localctx = new Brp_expressieContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_brp_expressie);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public ClosureContext closure() {
			return getRuleContext(ClosureContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_exp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			closure();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClosureContext extends ParserRuleContext {
		public BooleanExpContext booleanExp() {
			return getRuleContext(BooleanExpContext.class,0);
		}
		public AssignmentsContext assignments() {
			return getRuleContext(AssignmentsContext.class,0);
		}
		public ClosureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_closure; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitClosure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClosureContext closure() throws RecognitionException {
		ClosureContext _localctx = new ClosureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_closure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			booleanExp();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_WAARBIJ) {
				{
				setState(103);
				assignments();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentsContext extends ParserRuleContext {
		public TerminalNode OP_WAARBIJ() { return getToken(BRPExpressietaalParser.OP_WAARBIJ, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BRPExpressietaalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BRPExpressietaalParser.COMMA, i);
		}
		public AssignmentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignments; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitAssignments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentsContext assignments() throws RecognitionException {
		AssignmentsContext _localctx = new AssignmentsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignments);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(OP_WAARBIJ);
			setState(107);
			assignment();
			setState(112);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					match(COMMA);
					setState(109);
					assignment();
					}
					} 
				}
				setState(114);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode OP_EQUAL() { return getToken(BRPExpressietaalParser.OP_EQUAL, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			variable();
			setState(116);
			match(OP_EQUAL);
			setState(117);
			exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanExpContext extends ParserRuleContext {
		public BooleanTermContext booleanTerm() {
			return getRuleContext(BooleanTermContext.class,0);
		}
		public TerminalNode OP_OR() { return getToken(BRPExpressietaalParser.OP_OR, 0); }
		public BooleanExpContext booleanExp() {
			return getRuleContext(BooleanExpContext.class,0);
		}
		public BooleanExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitBooleanExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanExpContext booleanExp() throws RecognitionException {
		BooleanExpContext _localctx = new BooleanExpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_booleanExp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			booleanTerm();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_OR) {
				{
				setState(120);
				match(OP_OR);
				setState(121);
				booleanExp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanTermContext extends ParserRuleContext {
		public EqualityExpressionContext equalityExpression() {
			return getRuleContext(EqualityExpressionContext.class,0);
		}
		public TerminalNode OP_AND() { return getToken(BRPExpressietaalParser.OP_AND, 0); }
		public BooleanTermContext booleanTerm() {
			return getRuleContext(BooleanTermContext.class,0);
		}
		public BooleanTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanTerm; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitBooleanTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanTermContext booleanTerm() throws RecognitionException {
		BooleanTermContext _localctx = new BooleanTermContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_booleanTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			equalityExpression();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OP_AND) {
				{
				setState(125);
				match(OP_AND);
				setState(126);
				booleanTerm();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityExpressionContext extends ParserRuleContext {
		public List<RelationalExpressionContext> relationalExpression() {
			return getRuleContexts(RelationalExpressionContext.class);
		}
		public RelationalExpressionContext relationalExpression(int i) {
			return getRuleContext(RelationalExpressionContext.class,i);
		}
		public EqualityOpContext equalityOp() {
			return getRuleContext(EqualityOpContext.class,0);
		}
		public EqualityExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitEqualityExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityExpressionContext equalityExpression() throws RecognitionException {
		EqualityExpressionContext _localctx = new EqualityExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_equalityExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			relationalExpression();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_EQUAL) | (1L << OP_NOT_EQUAL) | (1L << OP_LIKE))) != 0)) {
				{
				setState(130);
				equalityOp();
				setState(131);
				relationalExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualityOpContext extends ParserRuleContext {
		public TerminalNode OP_EQUAL() { return getToken(BRPExpressietaalParser.OP_EQUAL, 0); }
		public TerminalNode OP_NOT_EQUAL() { return getToken(BRPExpressietaalParser.OP_NOT_EQUAL, 0); }
		public TerminalNode OP_LIKE() { return getToken(BRPExpressietaalParser.OP_LIKE, 0); }
		public EqualityOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityOp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitEqualityOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityOpContext equalityOp() throws RecognitionException {
		EqualityOpContext _localctx = new EqualityOpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equalityOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_EQUAL) | (1L << OP_NOT_EQUAL) | (1L << OP_LIKE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationalExpressionContext extends ParserRuleContext {
		public List<OrdinalExpressionContext> ordinalExpression() {
			return getRuleContexts(OrdinalExpressionContext.class);
		}
		public OrdinalExpressionContext ordinalExpression(int i) {
			return getRuleContext(OrdinalExpressionContext.class,i);
		}
		public RelationalOpContext relationalOp() {
			return getRuleContext(RelationalOpContext.class,0);
		}
		public RelationalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationalExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BRPExpressietaalVisitor ) return ((BRPExpressietaalVisitor<? extends T>)visitor).visitRelationalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationalExpressionContext relationalExpression() throws RecognitionException {
		RelationalExpressionContext _localctx = new RelationalExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_relationalExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			ordinalExpression();
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EOP_EQUAL) | (1L << AOP_EQUAL) | (1L << EOP_NOT_EQUAL) | (1L << AOP_NOT_EQUAL) | (1L << EOP_LIKE) | (1L << AOP_LIKE) | (1L << EOP_LESS) | (1L << AOP_LESS) | (1L << OP_LESS) | (1L << EOP_GREATER) | (1L << AOP_GREATER) | (1L << OP_GREATER) | (1L << EOP_LESS_EQUAL) | (1L << AOP_LESS_EQUAL) | (1L << OP_LESS_EQUAL) | (1L << EOP_GREATER_EQUAL) | (1L << AOP_GREATER_EQUAL) | (1L << OP_GREATER_EQUAL) | (1L << OP_AIN_WILDCARD) | (1L << OP_AIN) | (1L << OP_EIN_WILDCARD) | (1L << OP_EIN))) != 0)) {
				{
				setState(138);
				relationalOp();
				setState(139);
				ordinalExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
